media query for the mobile site

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="left-col">
     <div class="card card-front">
       <div class="card-front-container">
-        <img src="images/card-logo.svg"> <!-- logo for the card (the 2 circles in top left corner)-->
+        <img src="images/card-logo.svg" class="card-logo"> <!-- logo for the card (the 2 circles in top left corner)-->
         <div class="card-front-text">
           <p class="cc-number">0000 0000 0000 0000</p>
           <div class="inline-text">
