--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 </head>
 <body>
   <div class="left-col">
-    <div class="card card-front">
-      <div class="card-front-container">
-        <img src="images/card-logo.svg" class="card-logo"> <!-- logo for the card (the 2 circles in top left corner)-->
-        <div class="card-front-text">
-          <p class="cc-number">0000 0000 0000 0000</p>
-          <div class="inline-text">
-            <small>Jane Appleseed</small>
-            <small class="right">00/00</small>
-          </div>
-        </div>  
+    <div class="card-container">
+      <div class="card card-front">
+        <div class="card-front-container">
+          <img src="images/card-logo.svg" class="card-logo"> <!-- logo for the card (the 2 circles in top left corner)-->
+          <div class="card-front-text">
+            <p class="cc-number">0000 0000 0000 0000</p>
+            <div class="inline-text">
+              <small>Jane Appleseed</small>
+              <small class="right">00/00</small>
+            </div>
+          </div>  
+        </div>
       </div>
-    </div>
 
-    <div class="card card-back">
-      <div class="card-back-container">
-        <small class="card-back-text">000</small>
-      </div>
-    </div>   
+      <div class="card card-back">
+        <div class="card-back-container">
+          <small class="card-back-text">000</small>
+        </div>
+      </div>   
+  
+    </div>
   </div>
 
   <div class="right-col">
